# Autonomous-Personal-Assistant-AI-Agent-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  alembic.ini  podman-compose.prod.yml  podman-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  container.yml
agent/: checkpointing.py  graph.py
alembic/: env.py
bot/: __main__.py  app.py  card_sender.py  dialog_agent.py  errors.py  feedback_service.py  formatters.py  keyboards.py  middlewares.py  monitor_service.py  monitoring.py  preferences.py  recommendation_service.py  router.py  service.py  states.py
config/: __init__.py  observability.py  settings.py
db/: __init__.py  checkpoints.py  models.py  repositories.py  session.py
scheduler/: __init__.py  __main__.py  app.py  arq_worker.py  canary.py  jobs.py  notifier.py  producer.py  service.py
scripts/: validate_kz_locations.py
tests/: test_arq_worker.py  test_bot_app.py  test_bot_router.py  test_bot_service.py  test_card_sender.py  test_checkpointing.py  test_db_schema.py  test_dialog_agent.py  test_districts.py  test_enrich_node.py  test_fetch_lock.py  test_http_retry.py  test_infra_files.py  test_intent_node.py  test_jobs.py  test_krisha_parser.py  test_llm_intent_parser.py  test_location_catalog.py  test_location_resolver.py  test_middlewares.py  test_models.py  test_node_factories.py  test_notion_client.py  test_observability.py  test_preferences.py  test_scheduler.py  test_scoring_node.py  test_search_graph.py  test_settings.py  test_two_gis_client.py  test_validate_kz_locations.py
(+64 files in other folders)
